// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert component renders correct error message 1`] = `
<DocumentFragment>
  <p
    class="alert error"
  >
    Error
  </p>
</DocumentFragment>
`;

exports[`Alert component renders correct success message 1`] = `
<DocumentFragment>
  <p
    class="alert success"
  >
    Success
  </p>
</DocumentFragment>
`;

exports[`Alert component renders initial state correctly 1`] = `
<DocumentFragment>
  <p
    class="alert success"
  />
</DocumentFragment>
`;
